# visual-forge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  align.py  animation.py  artifacts.py  assets.py  audio.py  chunks.py  compose.py  env.py  failures.py  layout.py  logging_utils.py  main.py  media_probe.py  next_step.py  preview.py  project.py  project_lock.py  render.py  render_freshness.py  render_template.py  status.py  templates.py  timeline.py  transcribe.py  verify.py  visual_intents.py  visual_planner.py  visual_quality.py  visuals.py
assets/: manifest.json
projects/neha-much/: project.json
skills/visual-forge-runner/: SKILL.md
templates/: animated_journey_map.py  animated_opening_hook.py  contrast_board_motion.py  creator_journey_map.py  field_notes_motion.py  kinetic_text_beat.py  newspaper_headline.py  simple_card.py  time_capsule_motion.py
tests/: conftest.py  test_align_cli.py  test_artifact_freshness.py  test_assets_cli.py  test_audio_cli.py  test_chunk_preview_cli.py  test_chunks_cli.py  test_compose_cli.py  test_env.py  test_failures_cli.py  test_layout_cli.py  test_logging_cli.py  test_media_probe_cli.py  test_next_cli.py  test_preview_cli.py  test_preview_visual_cli.py  test_project_cli.py  test_project_lock.py  test_render_chunk_cli.py  test_render_freshness.py  test_render_template_cli.py  test_runner_skill_files.py  test_templates_cli.py  test_transcribe_cli.py  test_update_visual_cli.py  test_verify_cli.py  test_visual_intents_cli.py  test_visual_planner_cli.py  test_visuals_cli.py
(+8 files in other folders)
