[project]
name = "visual-forge"
version = "0.1.0"
description = "Codex-assisted, Python-powered visual production tools for YouTube videos."
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10",
  "concurrent-log-handler>=0.9.29",
  "portalocker>=3.2.0",
  "faster-whisper>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["app", "templates", "tests"]
exclude = [".venv", ".pytest_cache", "logs", "outputs"]
